# rag_app

./: .dockerignore  .env.example  .gitignore  DockerFile  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  main.py
app/api/: deps.py  main.py
app/api/routes/: data_fetcher.py  kg.py  rag.py
app/core/: data_fetcher.py  kg.py  rag.py  vector_db.py
app/models/: data_fetcher.py
app/prompts/: KG.txt  answer.txt  researcher.txt
app/schemas/: data_fetcher.py  kg.py  rag.py
app/utils/: cruds.py  db.py
init/: init.sql
ui/: Dockerfile  ui.py
ui-image/: DockerFile
