[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "docx>=0.2.4",
    "fastapi-offline>=1.7.5",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.72",
    "langchain-openai>=0.3.28",
    "langchain-text-splitters>=0.3.9",
    "pydantic>=2.11.7",
    "pypdf>=5.9.0",
    "pypdf2>=3.0.1",
    "sentence-transformers>=5.0.0",
    "streamlit>=1.47.1",
]
