[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.17.2",
    "arxiv>=2.3.1",
    "bs4>=0.0.2",
    "docx>=0.2.4",
    "fastapi[standard]>=0.121.3",
    "fastapi-offline>=1.7.5",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.72",
    "langchain-openai>=0.3.28",
    "langchain-text-splitters>=0.3.9",
    "pandas>=2.3.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.11.7",
    "pypdf>=5.9.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.0.0",
    "sqlalchemy>=2.0.42",
    "streamlit>=1.47.1",
    "uvicorn>=0.35.0",
    "loguru>=0.7.3",
    "gliner2>=1.0.2",
    "openinference-instrumentation-langchain>=0.1.56",
    "arize-phoenix>=12.20.0",
    "arize-phoenix-client>=1.26.0",
    "arize-phoenix-evals>=2",
    "arize-phoenix-otel>=0.14.0",
]

[dependency-groups]
dev = [
    "pandas-stubs>=2.3.2.250926",
]
